# lab02-traps-lucasmnd

./: .clang-tidy  .gdbinit  TODO.md  linker.ld  meson-llvm-riscv.ini  meson.build  qemu.sh
include/arch/: csr.h  io.h  pgtable.h  plic.h  spinlock.h  timer.h
include/kernel/: alloc.h  bits.h  defs.h  dtb.h  mm.h  panic.h  printf.h  serial.h  sizes.h  string.h  trap.h  types.h
include/ktest/: test.h
lab/: INSTRUCTIONS.md  test_shell.py
src/: alloc.c  dtb.c  entry.S  kmain.c  meson.build  mm.c  panic.c  printf.c  string.c  timer.c  trap.c  trap_entry.S
src/boot/: init.S
src/drivers/: plic.c  serial.c
src/ktest/: kmain.c  startup.c  test.c  trap.S
